Changed the title slightly

--- a/notebooks/bowling_effectiveness_by_phase.ipynb
+++ b/notebooks/bowling_effectiveness_by_phase.ipynb
@@ -4,7 +4,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## Bowling effectiveness by phase\n",
+    "## Bowling effectiveness by game phase\n",
     "### The curious case of the female pace bowler in the powerplay"
    ],
    "id": "3dbef72d793ecf69"
