Changing LaTeX formatting so that it renders properly on GitHub notebooks.

--- a/notebooks/first_over_signals.ipynb
+++ b/notebooks/first_over_signals.ipynb
@@ -71,27 +71,27 @@
    "cell_type": "markdown",
    "source": [
     "#### Variables:\n",
-    "$\\text{match\\_id}$ - the match identifier\n",
+    "$\\text{match_id}$ - the match identifier\n",
     "\n",
-    "$\\text{bowler\\_id}$ - the bowler identifier\n",
+    "$\\text{bowler_id}$ - the bowler identifier\n",
     "\n",
-    "$\\text{bowl\\_type}$ - the broad categorical bowling type for the bowler, either 'Seam' or 'Spin'.\n",
+    "$\\text{bowl_type}$ - the broad categorical bowling type for the bowler, either 'Seam' or 'Spin'.\n",
     "\n",
     "$\\text{sex}$ - the bowler's sex, either 'male' or 'female'.\n",
     "\n",
-    "$\\text{over\\_1\\_phase}$ - the phase that the bowler's first over is delivered in, either 'Powerplay' or 'Middle Overs'.\n",
+    "$\\text{over_1_phase}$ - the phase that the bowler's first over is delivered in, either 'Powerplay' or 'Middle Overs'.\n",
     "\n",
-    "$\\text{runs\\_total\\_1}$ - the number of runs conceded by the bowler in their first over.\n",
+    "$\\text{runs_total_1}$ - the number of runs conceded by the bowler in their first over.\n",
     "\n",
-    "$\\text{wickets\\_1}$ - the number of wickets taken by the bowler in their first over.\n",
+    "$\\text{wickets_1}$ - the number of wickets taken by the bowler in their first over.\n",
     "\n",
-    "$\\text{extra\\_ball\\_count\\_1}$ - the number of extra balls bowled by the bowler in their first over, as a result of a wide or no ball being bowled.\n",
+    "$\\text{extra_ball_count_1}$ - the number of extra balls bowled by the bowler in their first over, as a result of a wide or no ball being bowled.\n",
     "\n",
-    "$\\text{runs\\_other3}$ - the number of runs scored in the other 3 overs of the bowler's 4-over spell.\n",
+    "$\\text{runs_other3}$ - the number of runs scored in the other 3 overs of the bowler's 4-over spell.\n",
     "\n",
-    "$\\text{wickets\\_other3}$ - the number of wickets taken in the other 3 overs of the bowler's 4-over spell.\n",
+    "$\\text{wickets_other3}$ - the number of wickets taken in the other 3 overs of the bowler's 4-over spell.\n",
     "\n",
-    "$\\text{venue\\_id}$ - the venue identifier."
+    "$\\text{venue_id}$ - the venue identifier."
    ],
    "id": "168cd7f39b966fba"
   },
@@ -553,15 +553,15 @@
    "source": [
     "#### Model 1 - Gaussian Generalised Estimating Equation model:\n",
     "\n",
-    "Response Variable: $\\text{runs\\_other3}$\n",
+    "Response Variable: $\\text{runs_other3}$\n",
     "\n",
     "Marginal Mean:\n",
-    "$$E[\\text{runs\\_other3}_{ij}] = \\mu_{ij} = \\mathbf{\\beta}^T \\mathbf{x}_{ij}$$\n",
+    "$$E[\\text{runs_other3}_{ij}] = \\mu_{ij} = \\mathbf{\\beta}^T \\mathbf{x}_{ij}$$\n",
     "Variance Structure:\n",
-    "$$Var(\\text{runs\\_other3}_{ij}) = \\phi$$\n",
+    "$$Var(\\text{runs_other3}_{ij}) = \\phi$$\n",
     "(Where $\\phi$ is the scale parameter, constant for Gaussian)\n",
     "Correlation Structure:\n",
-    "$$Corr(\\text{runs\\_other3}_{ij}, \\text{runs\\_other3}_{ik}) = \\rho$$\n",
+    "$$Corr(\\text{runs_other3}_{ij}, \\text{runs_other3}_{ik}) = \\rho$$\n",
     "(Exchangeable correlation $\\rho$ for any two spells $j, k$ at the same venue $i$)"
    ],
    "id": "638ab280fb319d9d"
@@ -572,12 +572,12 @@
    "source": [
     "#### Model 2 - Poisson Generalised Estimating Equation model:\n",
     "\n",
-    "Response Variable: $\\text{wickets\\_other3}$ (Count Data)\n",
+    "Response Variable: $\\text{wickets_other3}$ (Count Data)\n",
     "\n",
     "Marginal Mean (Log Link):\n",
-    "$$\\log(E[\\text{wickets\\_other3}_{ij}]) = \\log(\\mu_{ij}) = \\mathbf{\\beta}^T \\mathbf{x}_{ij}$$\n",
+    "$$\\log(E[\\text{wickets_other3}_{ij}]) = \\log(\\mu_{ij}) = \\mathbf{\\beta}^T \\mathbf{x}_{ij}$$\n",
     "Variance Structure:\n",
-    "$$Var(\\text{wickets\\_other3}_{ij}) = \\phi \\cdot \\mu_{ij}$$\n",
+    "$$Var(\\text{wickets_other3}_{ij}) = \\phi \\cdot \\mu_{ij}$$\n",
     "(Where $\\phi \\approx 0.86$ accounts for the observed underdispersion)\n",
     "\n"
    ],
@@ -586,7 +586,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "$\\mathbf{\\beta}^T \\mathbf{x}_{ij}$ in both models is the fixed effects component. It is calculated as the dot product of the coefficient vector $\\mathbf{\\beta}$ (transposed) and the covariate vector $\\mathbf{x}_{ij}$. This includes the intercept, primary predictors ($\\text{runs\\_total\\_1}$, $\\text{wickets\\_1}$, $\\text{extra\\_balls\\_count\\_1}$), control variables ($\\text{over\\_1\\_phase}$, $\\text{sex}$), and three interaction terms between the primary predictors and the $\\text{bowl\\_type}$ variable.",
+   "source": "$\\mathbf{\\beta}^T \\mathbf{x}_{ij}$ in both models is the fixed effects component. It is calculated as the dot product of the coefficient vector $\\mathbf{\\beta}$ (transposed) and the covariate vector $\\mathbf{x}_{ij}$. This includes the intercept, primary predictors ($\\text{runs_total_1}$, $\\text{wickets_1}$, $\\text{extra_balls_count_1}$), control variables ($\\text{over_1_phase}$, $\\text{sex}$), and three interaction terms between the primary predictors and the $\\text{bowl_type}$ variable.",
    "id": "2219f18e9bae745e"
   },
   {
